--- a/public/index.html
+++ b/public/index.html
@@ -2,68 +2,34 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8" />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1, maximum-scale=1"
-  />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>大樓包裹通知（管理端）</title>
   <style>
     :root {
-      --bg: #0b0f13;
-      --card: #121822;
-      --muted: #93a1b1;
-      --text: #e8eef7;
-      --accent: #4f8cff;
-      --good: #24c08e;
-      --warn: #ffb02e;
-      --bad: #ff5c5c;
-      --border: #202a36;
+      --bg:#0b0f13; --card:#121822; --muted:#93a1b1; --text:#e8eef7; --accent:#4f8cff;
+      --good:#24c08e; --warn:#ffb02e; --bad:#ff5c5c; --border:#202a36;
     }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0; background: var(--bg); color: var(--text);
-      font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", Arial, "Noto Sans",
-        "Apple Color Emoji", "Segoe UI Emoji";
-    }
-    .wrap {
-      max-width: 920px; margin: 32px auto; padding: 0 16px;
-    }
-    h1 { font-size: 22px; font-weight: 700; margin: 0 0 16px; }
-    .card {
-      background: var(--card); border: 1px solid var(--border);
-      border-radius: 16px; padding: 20px; box-shadow: 0 6px 20px rgba(0,0,0,.25);
-    }
-    label { display:block; font-size: 13px; color: var(--muted); margin-bottom: 6px; }
-    input, select, textarea {
-      width: 100%; padding: 12px 14px; border-radius: 12px;
-      background: #0e141d; color: var(--text);
-      border: 1px solid var(--border); outline: none;
-    }
-    input:focus, select:focus, textarea:focus { border-color: var(--accent); }
-    .row { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; }
-    .mt { margin-top: 16px; }
-    .btnbar { display:flex; gap: 12px; align-items:center; }
-    button {
-      cursor: pointer; border: 0; padding: 12px 18px;
-      border-radius: 12px; font-weight: 700;
-      background: var(--accent); color: white;
-    }
-    .btn-ghost { background: transparent; border: 1px solid var(--border); color: var(--text); }
-    .hint { font-size: 12px; color: var(--muted); margin-top: 8px; }
-    .status {
-      margin-top: 16px; padding: 12px 14px; border-radius: 12px;
-      background: #0e141d; border: 1px solid var(--border); font-size: 14px;
-      white-space: pre-wrap;
-    }
-    .ok { border-color: rgba(36,192,142,.6); }
-    .partial { border-color: rgba(255,176,46,.6); }
-    .bad { border-color: rgba(255,92,92,.6); }
-    .badge { display:inline-block; padding: 4px 10px; border-radius: 999px; font-size: 12px; }
-    .badge-ok { background: rgba(36,192,142,.15); color: var(--good); }
-    .badge-partial { background: rgba(255,176,46,.15); color: var(--warn); }
-    .badge-bad { background: rgba(255,92,92,.15); color: var(--bad); }
-    .cap { font-variant-numeric: tabular-nums; }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Helvetica Neue",Arial,"Noto Sans","Apple Color Emoji","Segoe UI Emoji"}
+    .wrap{max-width:920px;margin:32px auto;padding:0 16px}
+    h1{font-size:22px;font-weight:700;margin:0 0 16px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:20px;box-shadow:0 6px 20px rgba(0,0,0,.25)}
+    label{display:block;font-size:13px;color:var(--muted);margin-bottom:6px}
+    input,select,textarea{width:100%;padding:12px 14px;border-radius:12px;background:#0e141d;color:var(--text);border:1px solid var(--border);outline:none}
+    input:focus,select:focus,textarea:focus{border-color:var(--accent)}
+    .row{display:grid;grid-template-columns:1fr 1fr;gap:16px}
+    .mt{margin-top:16px}
+    .btnbar{display:flex;gap:12px;align-items:center}
+    button{cursor:pointer;border:0;padding:12px 18px;border-radius:12px;font-weight:700;background:var(--accent);color:#fff}
+    .btn-ghost{background:transparent;border:1px solid var(--border);color:var(--text)}
+    .hint{font-size:12px;color:var(--muted);margin-top:8px}
+    .status{margin-top:16px;padding:12px 14px;border-radius:12px;background:#0e141d;border:1px solid var(--border);font-size:14px;white-space:pre-wrap}
+    .ok{border-color:rgba(36,192,142,.6)} .partial{border-color:rgba(255,176,46,.6)} .bad{border-color:rgba(255,92,92,.6)}
+    .badge{display:inline-block;padding:4px 10px;border-radius:999px;font-size:12px}
+    .badge-ok{background:rgba(36,192,142,.15);color:var(--good)}
+    .badge-partial{background:rgba(255,176,46,.15);color:var(--warn)}
+    .badge-bad{background:rgba(255,92,92,.15);color:var(--bad)}
+    .cap{font-variant-numeric:tabular-nums}
   </style>
 </head>
 <body>
@@ -80,23 +46,23 @@
         <div>
           <label for="count">件數（可空白）</label>
           <div class="btnbar">
-            <input id="count" type="number" min="0" placeholder="例如：1">
-            <button class="btn-ghost" data-q="1">+1</button>
-            <button class="btn-ghost" data-q="2">+2</button>
-            <button class="btn-ghost" data-q="3">+3</button>
-            <button class="btn-ghost" data-q="0">清空</button>
+            <input id="count" type="number" min="0" placeholder="例如：1" />
+            <button class="btn-ghost" data-q="1" type="button">+1</button>
+            <button class="btn-ghost" data-q="2" type="button">+2</button>
+            <button class="btn-ghost" data-q="3" type="button">+3</button>
+            <button class="btn-ghost" data-q="0" type="button">清空</button>
           </div>
         </div>
       </div>
 
       <div class="mt">
         <label for="note">備註（可空白）</label>
-        <textarea id="note" rows="3" placeholder="例如：易碎、冷凍、掛號、請先到櫃臺簽收…"></textarea>
+        <textarea id="note" rows="3" placeholder="例如：易碎、冷凍、掛號，請先到櫃臺簽收…"></textarea>
       </div>
 
       <div class="btnbar mt">
-        <button id="send">送出通知</button>
-        <button id="refresh" class="btn-ghost">重新載入門牌清單</button>
+        <button id="send" type="button">送出通知</button>
+        <button id="refresh" class="btn-ghost" type="button">重新載入門牌清單</button>
       </div>
 
       <div id="status" class="status" style="display:none"></div>
@@ -108,121 +74,8 @@
     </p>
   </div>
 
-  <script>
-    const ddl = document.querySelector('#apt');
-    const countEl = document.querySelector('#count');
-    const noteEl = document.querySelector('#note');
-    const statusEl = document.querySelector('#status');
-    const btnSend = document.querySelector('#send');
-    const btnRefresh = document.querySelector('#refresh');
-
-    function showStatus(kind, msg) {
-      statusEl.className = 'status ' + (kind || '');
-      statusEl.style.display = 'block';
-      statusEl.innerHTML = msg;
-    }
-    function clearStatus() {
-      statusEl.style.display = 'none';
-      statusEl.textContent = '';
-      statusEl.className = 'status';
-    }
-
-    async function loadApts() {
-      clearStatus();
-      ddl.innerHTML = '<option value="">載入中…</option>';
-      try {
-        const res = await fetch('/api/apartments', { credentials: 'same-origin' });
-        if (!res.ok) throw new Error('載入失敗：' + res.status);
-        const list = await res.json();
-        ddl.innerHTML = '';
-        // 加個常用快速前綴 A-14-1
-        const pref = 'A-14-1';
-        let hasPref = false;
-
-        for (const r of list) {
-          const opt = document.createElement('option');
-          opt.value = r.apartment_no;
-          opt.textContent = r.display_name || r.apartment_no;
-          if (r.apartment_no === pref) hasPref = true;
-          ddl.appendChild(opt);
-        }
-        if (hasPref) ddl.value = pref;
-        showStatus('ok', '✅ 門牌清單載入完成，共 ' + list.length + ' 戶。');
-      } catch (err) {
-        showStatus('bad', '❌ 無法載入門牌清單：' + err.message);
-      }
-    }
-
-    // 量化快捷鍵
-    document.querySelectorAll('[data-q]').forEach(btn => {
-      btn.addEventListener('click', () => {
-        const q = Number(btn.dataset.q);
-        if (q === 0) { countEl.value = ''; return; }
-        const cur = Number(countEl.value || 0);
-        countEl.value = String(cur + q);
-      });
-    });
-
-    btnRefresh.addEventListener('click', loadApts);
-
-    btnSend.addEventListener('click', async () => {
-      clearStatus();
-      const apartment = ddl.value;
-      const count = countEl.value ? Number(countEl.value) : undefined;
-      const note = noteEl.value.trim() || undefined;
-
-      if (!apartment) {
-        showStatus('bad', '❌ 請先選擇門牌。');
-        return;
-      }
-
-      btnSend.disabled = true;
-      btnSend.textContent = '送出中…';
-
-      try {
-        const res = await fetch('/api/notify', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'same-origin',
-          body: JSON.stringify({ apartment, count, note })
-        });
-
-        const text = await res.text();
-        let data = {};
-        try { data = JSON.parse(text); } catch (_) {}
-
-        if (res.status === 200) {
-          const okCount = Array.isArray(data.results) ? data.results.filter(r => r.ok).length : 0;
-          showStatus('ok',
-            '✅ 已送出通知：<span class="badge badge-ok">OK</span> ' +
-            '<span class="cap">' + okCount + '</span> 位。' +
-            (note ? '<br>備註：' + note : '')
-          );
-        } else if (res.status === 207) {
-          // 部分成功
-          const ok = data.results?.filter(r => r.ok).length ?? 0;
-          const fail = data.results?.length ? (data.results.length - ok) : 0;
-          showStatus('partial',
-            '⚠️ 部分成功：<span class="badge badge-partial">PARTIAL</span> ' +
-            'OK <span class="cap">' + ok + '</span> 位；失敗 <span class="cap">' + fail + '</span> 位。\n' +
-            (data.results ? JSON.stringify(data.results, null, 2) : '')
-          );
-        } else {
-          showStatus('bad',
-            '❌ 送出失敗（HTTP ' + res.status + '）。\n' +
-            (text || '')
-          );
-        }
-      } catch (err) {
-        showStatus('bad', '❌ 送出錯誤：' + err.message);
-      } finally {
-        btnSend.disabled = false;
-        btnSend.textContent = '送出通知';
-      }
-    });
-
-    // 初始載入
-    loadApts();
-  </script>
+  <!-- 外掛腳本，避免 inline script 觸發 CSP -->
+  <script src="/admin.js" defer></script>
+  <noscript>請啟用 JavaScript</noscript>
 </body>
 </html>
